fix typo in rtp command